# dummy-bisect-repo

./: .gitignore  README.md  script.sh
bun-jest/: README.md  package.json
bun-jest/src/: math.js
bun-jest/tests/: math.test.js
cargo-rust/: Cargo.toml  README.md
cargo-rust/src/: lib.rs
deno-nextjs/: README.md  deno.json
deno-nextjs/lib/: arrays.ts
deno-nextjs/tests/: arrays_test.ts
dotnet-xunit/: README.md  StringUtils.cs  StringUtilsTests.cs  dotnet-xunit.csproj
go-test/: README.md  go.mod  math.go  math_test.go
node-vitest/: README.md  package.json
node-vitest/src/: strings.js
node-vitest/tests/: strings.test.js
pip-django/: README.md  conftest.py  manage.py  requirements.txt  utils.py
pip-django/mysite/: settings.py  urls.py
pip-django/tests/: test_utils.py
python-cpp/: README.md  setup.py
python-cpp/fastmath/: __init__.py
python-cpp/src/: _fastmath.cpp
python-cpp/tests/: test_fastmath.py
ruby-rails/: Gemfile  README.md  Rakefile
ruby-rails/config/: application.rb
ruby-rails/lib/: text_helpers.rb
ruby-rails/test/: test_helper.rb  test_text_helpers.rb
uv-flask/: README.md  app.py  pyproject.toml  utils.py
uv-flask/tests/: test_utils.py
