[project]
name = "uv-flask-bisect"
version = "0.1.0"
description = "A simple Flask app for bisect testing"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
